// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostMeta /> should render approximately multiple minutes 1`] = `
<aside
  class="css-j7qwjs"
>
  <div
    class="css-96di1v"
  >
    <span
      class="css-1fuc7m2"
    >
      <svg
        class="css-79tm4e"
      >
        <use
          xlink:href="#icon-calendar-alt"
        />
      </svg>
      <time
        datetime="2022-3-16"
      >
        16.3.2022
      </time>
    </span>
    <span
      class="css-1fuc7m2"
    >
      <svg
        class="css-79tm4e"
      >
        <use
          xlink:href="#icon-clock"
        />
      </svg>
      <span>
        noin 15 minuuttia
      </span>
    </span>
  </div>
  <ul
    class="css-1xhj18k"
  >
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/kirkkonummi"
      >
        #
        kirkkonummi
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/aluevaalit"
      >
        #
        aluevaalit
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/sote"
      >
        #
        sote
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/kuntavaalit"
      >
        #
        kuntavaalit
      </a>
    </li>
  </ul>
</aside>
`;

exports[`<PostMeta /> should render exactly one minute 1`] = `
<aside
  class="css-j7qwjs"
>
  <div
    class="css-96di1v"
  >
    <span
      class="css-1fuc7m2"
    >
      <svg
        class="css-79tm4e"
      >
        <use
          xlink:href="#icon-calendar-alt"
        />
      </svg>
      <time
        datetime="2022-3-16"
      >
        16.3.2022
      </time>
    </span>
    <span
      class="css-1fuc7m2"
    >
      <svg
        class="css-79tm4e"
      >
        <use
          xlink:href="#icon-clock"
        />
      </svg>
      <span>
        1 minuutti
      </span>
    </span>
  </div>
  <ul
    class="css-1xhj18k"
  >
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/kirkkonummi"
      >
        #
        kirkkonummi
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/aluevaalit"
      >
        #
        aluevaalit
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/sote"
      >
        #
        sote
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/kuntavaalit"
      >
        #
        kuntavaalit
      </a>
    </li>
  </ul>
</aside>
`;

exports[`<PostMeta /> should render less than a minute 1`] = `
<aside
  class="css-j7qwjs"
>
  <div
    class="css-96di1v"
  >
    <span
      class="css-1fuc7m2"
    >
      <svg
        class="css-79tm4e"
      >
        <use
          xlink:href="#icon-calendar-alt"
        />
      </svg>
      <time
        datetime="2022-3-16"
      >
        16.3.2022
      </time>
    </span>
    <span
      class="css-1fuc7m2"
    >
      <svg
        class="css-79tm4e"
      >
        <use
          xlink:href="#icon-clock"
        />
      </svg>
      <span>
        alle minuutti
      </span>
    </span>
  </div>
  <ul
    class="css-1xhj18k"
  >
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/kirkkonummi"
      >
        #
        kirkkonummi
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/aluevaalit"
      >
        #
        aluevaalit
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/sote"
      >
        #
        sote
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/kuntavaalit"
      >
        #
        kuntavaalit
      </a>
    </li>
  </ul>
</aside>
`;

exports[`<PostMeta /> should render multiple minutes 1`] = `
<aside
  class="css-j7qwjs"
>
  <div
    class="css-96di1v"
  >
    <span
      class="css-1fuc7m2"
    >
      <svg
        class="css-79tm4e"
      >
        <use
          xlink:href="#icon-calendar-alt"
        />
      </svg>
      <time
        datetime="2022-3-16"
      >
        16.3.2022
      </time>
    </span>
    <span
      class="css-1fuc7m2"
    >
      <svg
        class="css-79tm4e"
      >
        <use
          xlink:href="#icon-clock"
        />
      </svg>
      <span>
        15 minuuttia
      </span>
    </span>
  </div>
  <ul
    class="css-1xhj18k"
  >
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/kirkkonummi"
      >
        #
        kirkkonummi
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/aluevaalit"
      >
        #
        aluevaalit
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/sote"
      >
        #
        sote
      </a>
    </li>
    <li
      class="css-1rw86pq"
    >
      <a
        class="css-1oxnj2p"
        href="/blogi/kuntavaalit"
      >
        #
        kuntavaalit
      </a>
    </li>
  </ul>
</aside>
`;
